# JarCode

./: .gitignore  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  env.example  env_prod.example
backend/: Dockerfile  pyproject.toml
backend/jarcode/: .coveragerc  manage.py  pytest.ini
backend/jarcode/ai_evaluator/: ai_evaluator.py  gemini_evaluator.py
backend/jarcode/courses/: admin.py  factories.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/jarcode/courses/migrations/: 0001_initial.py  0002_course_thumbnail.py  0003_alter_chapter_options_alter_course_options_and_more.py  0004_alter_course_thumbnail.py  0005_alter_lessonimage_image.py
backend/jarcode/jarcode/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/jarcode/jarcode/settings/: settings_prod.py  settings_test.py
backend/jarcode/judge/: cpp_judge.py  java_judge.py  judge.py  python_judge.py  result_dto.py
backend/jarcode/judge/images/: cpp_judge.dockerfile  java_judge.dockerfile  python_judge.dockerfile
backend/jarcode/problems/: admin.py  factories.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/jarcode/problems/migrations/: 0001_initial.py  0002_alter_problem_language.py  (+1 more)
backend/jarcode/submissions/: admin.py  consumers.py  factories.py  models.py  pagination.py  routing.py  serializers.py  submission_service.py  tasks.py  urls.py  views.py
backend/jarcode/tests/: conftest.py  test_courses_api.py  test_cpp_judge.py  test_java_judge.py  test_problems_api.py  test_python_judge.py  test_submissions_api.py  test_users_api.py
backend/jarcode/users/: admin.py  consts.py  factories.py  managers.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
(+142 files in other folders)
